Update Feature Icons; Subtle changes in Spacing; Fix W3C Validator errors I replaced the single placeholder image with a unique icon for each feature. These icons come from Material Design Icons, which I think corresponds reasonably well with the current Tenacity icons that are leftover from Tenacity being an Audacity fork.
I also subtly decreased the Spacing of the Headers between the Features List
because it was too big before.

I also fixed as many errors from the W3C's HTML & CSS Validators
as I could without breaking the website.

--- a/styles/feature-cards.css
+++ b/styles/feature-cards.css
@@ -4,7 +4,6 @@ div.features-section {
 	max-width: 40rem;
 	margin: auto;
 	display: grid;
-	grid-column-template: auto;
 }
 
 div.feature-card {	display: flex;	}
